# guzo

./: .env  .gitignore  Dockerfile  MIGRATION_INSTRUCTIONS.md  Makefile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.js
scripts/: seed_db.py
src/: App.tsx  __init__.py  index.css
src/components/: Features.tsx  Footer.tsx  Hero.tsx  Layout.tsx  Logo.tsx  Navbar.tsx  ProtectedRoute.tsx  Services.tsx  Stats.tsx  Testimonials.tsx  Trust.tsx
src/constants/: locations.ts
src/context/: AuthContext.tsx
src/guzo/: __init__.py  app.py  config.py  core.py  middleware.py
src/guzo/admin/: __init__.py  resource.py  service.py
src/guzo/analytics/: __init__.py  core.py  resource.py  service.py
src/guzo/auth/: __init__.py  core.py  repository.py  resource.py  service.py
src/guzo/bookings/: __init__.py  core.py  repository.py  resource.py  service.py
src/guzo/favorites/: __init__.py  core.py  repository.py  resource.py  service.py
src/guzo/infrastructure/: __init__.py  mongo.py  repository.py
src/guzo/pages/: __init__.py  resource.py
src/guzo/payments/: __init__.py  core.py  repository.py  resource.py  service.py
src/guzo/pricing/: __init__.py  core.py  repository.py  resource.py  service.py
src/lib/: supabase.ts
src/pages/: AdminDashboard.tsx  CustomerDashboard.tsx  DriverDashboard.tsx  Landing.tsx  Login.tsx  Signup.tsx
supabase/: fix_user_signup.sql  run-migration.js  schema.sql
supabase/migrations/: 20240101000000_shared_ride_system.sql  20240102000000_fix_user_profile_creation.sql
(+84 files in other folders)
